--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@prisma/client": "^5.6.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
-    "connect-redis": "^7.1.0",
+    "connect-redis": "^7.1.1",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -13,9 +13,11 @@
     "firebase-admin": "^11.11.1",
     "firebase-auth": "^0.1.2",
     "firebase-functions": "^4.5.0",
+    "ioredis": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.9.8",
     "openai": "^4.20.1",
     "redis": "^4.6.11",
     "socket.io": "^4.7.2",
