--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "main": "Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " nodemon ./index.js"
+    "start": " nodemon ./index.js",
+    "prod":"node index.js"
   },
   "author": "",
   "license": "ISC",
