--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.9.8",
     "openai": "^4.20.1",
+    "prisma": "^5.9.1",
     "redis": "^4.6.11",
     "socket.io": "^4.7.2",
     "twilio": "^4.19.3",
@@ -30,7 +31,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " nodemon ./index.js",
-    "prod":"node index.js"
+    "prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
